ran with android studios

--- a/groceryapp/src/app/grocery/grocery.html
+++ b/groceryapp/src/app/grocery/grocery.html
@@ -16,34 +16,32 @@
   <ion-list>
       
     <ion-item-sliding 
-      *ngFor="let item of items">
+      *ngFor="let item of items; let i = index">
         <ion-item>
-          <ion-label>{{ item.name }}, {{ item.quantity}}</ion-label>
+          <ion-label>{{ item.name }}, {{ item.quantity }}</ion-label>
         </ion-item>
         <ion-item-options  side="end">
-          <ion-item-option id="open-toast-done" type="button" color="Warning" (click)="removeItem(item)">Done</ion-item-option>
-          <ion-toast trigger="open-toast-done" message="Item  removed." [duration]="3000"></ion-toast>
+          <ion-item-option id="open-toast-done" type="button" color="success" (click)="removeItem(item, i)">Done</ion-item-option>
         </ion-item-options>
+        
       </ion-item-sliding>
   </ion-list>
  
 
-  <!-- <ion-fab>
-  <ion-fab-button>
-    <ion-icon name="add"></ion-icon>
-  </ion-fab-button>
-</ion-fab> -->
-
+ <!--  add item to list -->
 <ion-fab slot="fixed" vertical="bottom" horizontal="end">
   <ion-fab-button id="present-alert">
     <ion-icon name="add" aria-hidden="true"></ion-icon>
   </ion-fab-button>
   <ion-alert
     trigger="present-alert"
-    header="Add item to list"
+    header="Please enter item..."
+    default=""
     [buttons]="alertButtons"
     [inputs]="alertInputs">
   </ion-alert>
-</ion-fab>
+</ion-fab> 
+
+<!-- <ion-button click="_alert()"  shape="round">Present Alert</ion-button> --> 
 
 </ion-content>
