--- a/groceryapp/src/app/grocery/grocery.scss
+++ b/groceryapp/src/app/grocery/grocery.scss
@@ -1,12 +1,12 @@
-// ion-fab-button {
-//     --background: #b7f399;
-//     // --background-activated: #87d361;
-//     --background-hover: #a3e681;
-//     --border-radius: 15px;
-//     --box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
-//     --color: black;
-//     --font-size: 24px;
-//   }
+ion-fab-button {
+    --background: #3880ff;
+    // --background-activated: #87d361;
+    --background-hover: #3880ff;
+    --border-radius: 15px;
+    --box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
+    --color: white;
+    --font-size: 24px;
+  }
 
 ion-fab {
     margin-top: var(--ion-safe-area-top, 0);
