--- a/groceryapp/src/app/about/about.html
+++ b/groceryapp/src/app/about/about.html
@@ -20,10 +20,10 @@
       </ion-card-header>
     
       <ion-card-content>
-        Maryville ID: 1048638 
+        Maryville University ID: 1048638 
       </ion-card-content>
     </ion-card>
     
     
-    <!-- <app-explore-container name="About"></app-explore-container> -->
+
   </ion-content>
