--- a/groceryapp/src/app/grocery/grocery.html
+++ b/groceryapp/src/app/grocery/grocery.html
@@ -35,7 +35,7 @@
   </ion-fab-button>
   <ion-alert
     trigger="present-alert"
-    header="Please enter item..."
+    header="Please enter an item..."
     default=""
     [buttons]="alertButtons"
     [inputs]="alertInputs">
